--- a/client/src/components/FeedRss.css
+++ b/client/src/components/FeedRss.css
@@ -7,6 +7,7 @@
 .feed_rss {
     max-width: 900px;
     padding: 30px;
+    hyphens: auto;
 }
 
 .container img {
